# Automation_Final_Taskphase

install/: local_setup.sh  setup.sh  setup.zsh
log/: latest_build
more_interfaces/: package.xml
my_package/: package.xml  setup.py
py_pubsub/: package.xml  setup.py
py_srvcli/: package.xml  setup.py
robot_task1/: package.xml  setup.cfg  setup.py
robot_task1/launch/: gazebo_launch.py
robot_task1/robot_task1/: client.py  move.py  my_node.py  waypoint_service.py
robot_task1/urdf/: rob_desc.urdf
spiral_maze/: CMakeLists.txt
spiral_maze/codes/: movemaze
spiral_maze/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
spiral_maze/install/spiral_maze/lib/spiral_maze/: movemaze.py
spiral_maze/install/spiral_maze/share/spiral_maze/: local_setup.dsv  package.bash  package.ps1  package.sh
spiral_maze/install/spiral_maze/share/spiral_maze/launch/: spiral_maze.launch.py
spiral_maze/launch/: spiral_maze.launch.py
spiral_maze/log/: latest_build
spiral_maze/mesh/: caster_wheel.STL
spiral_maze/models/spiral_maze_model/: model.config
spiral_maze/models/spiral_maze_model/materials/meshes/: maze_v1.stl
spiral_maze/urdf/: bot_desc.urdf
spiral_maze/world/: spiral_maze_course.world
srvpkg/: CMakeLists.txt  package.xml
srvpkg/srv/: Waypoint.srv
task1/: package.xml  setup.cfg  setup.py
task1/install/: local_setup.sh  setup.sh
task1/launch/: gazebo_launch.py
task1/log/: latest_build
task1/mesh/: bot_body.stl  caster_part.STL  wheel.STL
task1/task1/: client.py  custom_odometry.py  move.py  waypoint_service.py
task1/urdf/: bot_desc.urdf
tutorial_interfaces/: CMakeLists.txt  package.xml
(+110 files in other folders)
